--- a/Project2/Karpool/index.html
+++ b/Project2/Karpool/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE HTML>
-<!--
-	Road Trip by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>KarPool</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Student Car pool Services <span>by Karpool</span></a></div>
+				<div class="logo"><a href="index.html">Student Car Pool Services <span>by KarPool</span></a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
@@ -23,8 +19,10 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html">Find a Ride</a></li>
-					<li><a href="index.html">Login</a></li>
+					<li><a href="findride.html">Find a Ride</a></li>
+					<li><a href="https://www.facebook.com/UTAustinTX/" class="icon round fa-facebook"> Facebook <span class="label"></span></a></li>
+					<li><a href="index.html">Checkout</a></li>
+					<li><a href="index.html">Meetup</a></li>
 				</ul>
 			</nav>
 
@@ -41,7 +39,7 @@
 						<h3>For the students by the students</h3>
 					</header>
 				</div>
-				<a href="#one" class="more">Learn More</a>
+				<a href="findride.html" class="more">Learn More</a>
 			</section>
 
 		<!-- One -->
@@ -49,24 +47,59 @@
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Find a ride now</h2>
+
+							<h2>(i) Login</h2>
+						  <h2>(ii) Tell us about your self!</h2>
+						  <h2>(iii) Checkout!</h2>
+							<br>
 							<p>Just fill out the form and we'll do the rest</p>
 						</header>
 						<div class="content">
-							<p>The hassel of going back home now is no more. Find a ride back home with your class mates with vehicles. Your classmates are willing to take you home if you can pitch in with gas money. They are willing to share their playlist too! Find out if theres a ride available or click here to provide a ride.</p>
-						</div>
+							<p>The hassel of going back home now is no more. Find a ride back home with your class mates with vehicles. Your classmates are willing to take you home if you can pitch in with gas money. They are willing to share their playlist too! Find out if theres a ride available now.</p>
 
-							<!-- booking form  -->
+						</div>
+					</div>
+
+
+
+
+					</article>
+				</div>
+				<a href="#two" class="more">Learn More</a>
+			</section>
+
+		<!-- Two -->
+			<section id="two" class="wrapper post bg-img" data-bg="banner6.jpg">
+				<div class="inner">
+					<article class="box">
+						<header>
+
+<!-- booking form  -->
+					<form>
+						<h2>Find a ride now</h2>
+								<div class="row">
+									<div class="col-md-6 col-md-12 mt">
+										<div class="field">
+											<label for="form">Name</label>
+											<input type="text" class="form-control" id="from-name" placeholder="Pancho Villa"/>
+										</div>
+									</div>
+										<div class="col-xs-12 col-xs-12 mt">
+											<label for="form">Email</label>
+											<input type="text" class="form-control" id="from-email" placeholder="PVilla@utexas.edu"/>
+										</div>
+
+								</div>
 							 <div class="row">
 								 <div class="col-xs-12 col-xs-12 mt">
-									 <div class="input-field">
-										 <label for="from">Current City:</label>
+									 <div class="field">
+										 <label for="from"> Current City: </label>
 										 <input type="text" class="form-control" id="from-place" placeholder="University of Texas"/>
 									 </div>
 								 </div>
 
 								 <div class="col-xs-12 col-xs-12 mt">
-									 <div class="input-field">
+									 <div class="field">
 										 <label for="from">Destination City:</label>
 										 <input type="text" class="form-control" id="to-place" placeholder="Katy"/>
 									 </div>
@@ -75,14 +108,14 @@
 
 								<div class="row">
 								 <div class="col-xxs-12 col-xs-6 mt alternate">
-									 <div class="input-field">
+									 <div class="field">
 										 <label for="date-start">Departure date</label>
 										 <input type="text" class="form-control" id="date-start" placeholder="mm/dd/yyyy"/>
 									 </div>
 								 </div>
 
 								 <div class="col-xxs-12 col-xs-6 mt alternate">
-									 <div class="input-field">
+									 <div class="field">
 										 <label for="date-end">Return date</label>
 										 <input type="text" class="form-control" id="date-end" placeholder="mm/dd/yyyy"/>
 									 </div>
@@ -103,45 +136,36 @@
 								 </div>
 							 </div>
 
-			<footer>
-				<a href="generic.html" class="button alt">Search now</a>
-			</footer>
-					</article>
-				</div>
-				<a href="#two" class="more">Learn More</a>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="wrapper post bg-img" data-bg="banner5.jpg">
-				<div class="inner">
-					<article class="box">
-						<header>
-							<h2>Two way Authentication</h2>
-							<p>Utexas email || Facebook Authentication and social media presence check </p>
-						</header>
-						<div class="content">
-							<p>By using University of Texas email address and Facebook authentication users decrese their chances of unfriendly encounters that may arise when we use alternate forms of transportation. By using facebook and talking to your student share host we have the opprtnity to create bonds and friendships with people that are part of our community at school and to our local cities.</p>
-						</div>
+									<br>
+							 	<div class="row">
+	 								<div class="col-xs-6 col-xs-6">
+	 									<div id="search">
+	 											<button type="button">Search</button>
+	 									</div>
+	 								</div>
+							  </div>
+							</div>
+						</form>
 						<footer>
-							<a href="generic.html" class="button alt">Learn More</a>
+							<a href="index.html" class="more">Learn More</a>
 						</footer>
 					</article>
 				</div>
-				<a href="#three" class="more">Learn More</a>
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="wrapper post bg-img" data-bg="banner4.jpg">
+			<section id="three" class="wrapper post bg-img" data-bg="banner7.jpg">
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Thursday night Meetups</h2><img src="images/meet.png" alt="Meetup">
+							<img src="images/meet.png" alt="Meetup">
+							<h2>Thursday Night Meetups</h2>
 						</header>
 						<div class="content">
-							<p>Come out to meet your KarPool hosts. We meet at UT LANES bowling alley on W. 13th @ Lavaca st. every Second Thursdays. Get a chance to meet your hosts before hand so you can decide on maps, music, food and more for the ride.  </p>
+							<p>Come out to meet your KarPool hosts. We meet at UT LANES bowling alley on W. 13th @ Lavaca st. every Second Thursdays. Get a chance to meet your hosts before hand so you can decide on maps, music, and more for the ride.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">Meetup</a>
+							<a href="index.html" class="button alt">Meetup</a>
 						</footer>
 					</article>
 				</div>
@@ -153,14 +177,14 @@
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Donate now</h2>
-							<p>Help fund this service now</p>
+							<h2>Two way Authentication</h2>
+							<p>Utexas email || Facebook Authentication and social media presence check </p>
 						</header>
 						<div class="content">
-							<p>All donations will go towards IT infrastruture, Hosting cost, and Meetups spending. </p>
+							<p>By using University of Texas email address and Facebook authentication users decrese their chances of unfriendly encounters that may arise when we use alternate forms of transportation. By using facebook and talking to your student share host we have the opprtnity to create bonds and friendships with people that are part of our community at school and to our local cities.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">Pitch in!</a>
+							<a href="generic.html" class="button alt">Learn More</a>
 						</footer>
 					</article>
 				</div>
@@ -198,7 +222,7 @@
 					</ul>
 
 					<div class="copyright">
-						&copy; KarPool. Design: <a href="https://karpool.car">KarPool</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; KarPool. Design: <a href="https://karpool.car">KarPool</a>. Images: <a href="https://unsplash.com">Unsplash</a>.<a href="#" class="icon fa-github"><span class="label">Github</span></a>
 					</div>
 
 				</div>
